allow validation to be turned off by request parameter
